<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.ThingsConnectionActivity">

    <LinearLayout
        android:id="@+id/waitingLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:layout_centerInParent="true"
    >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_authentication"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/fab_margin"
        />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
    >
        <TextView
            android:id="@+id/deviceNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorBlack"
        />
        <TextView
            android:id="@+id/ownerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_owner_name"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/fab_margin"
        />
        <TextView
            android:id="@+id/ownerEmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_owner_email"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/fab_margin"
        />
    </LinearLayout>



</RelativeLayout>