<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_centerInParent="true"

    >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
        >
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_bg"
                android:backgroundTint="@color/colorOrange"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"

            >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_info"
                    android:layout_centerInParent="true"
                />

            </RelativeLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginEnd="@dimen/large_margin"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/large_margin"

            />
            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_name"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/medium_margin"
            />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:background="@color/colorWarmGrey"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/medium_margin"
            />
            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_email"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/medium_margin"
            />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:background="@color/colorWarmGrey"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_label"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorBlack"
            />
            <TextView
                android:id="@+id/deviceNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_type"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/medium_margin"
            />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:background="@color/colorWarmGrey"
            />
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>