<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.WelcomeActivity"
    android:background="@color/colorWhite"
    android:paddingTop="90dp"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_margin="@dimen/fab_margin"
        android:layout_centerInParent="true"

    >
        <ImageView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_smarthome"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
        />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginEnd="@dimen/fab_margin"

        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textSize="@dimen/text_size__extra_large"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome__desc_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_medium_large"
                android:layout_marginTop="@dimen/fab_margin"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
            />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/getStartedRel"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentEnd="true"
        android:text="@string/get_started"
        android:background="@color/colorCyanBlue"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_normal"
    />



</RelativeLayout>