<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_margin="@dimen/large_margin"
    >
        <androidx.cardview.widget.CardView
            android:id="@+id/internetCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="@dimen/medium_margin"
            app:cardCornerRadius="@dimen/card_radius"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/large_margin"
            >

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_bg"
                    android:layout_gravity="center_horizontal"
                >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_wifi_yellow"
                        android:layout_centerInParent="true"

                    />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internet_label"
                    android:textSize="@dimen/text_size_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/large_margin"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/dashboardCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:cardCornerRadius="@dimen/card_radius"
            android:layout_margin="@dimen/medium_margin"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/large_margin"
            >

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_bg"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/colorGrey"
                >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_motion_sensor"
                        android:layout_centerInParent="true"

                    />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motion_label"
                    android:textSize="@dimen/text_size_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/large_margin"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/temperatureCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:cardCornerRadius="@dimen/card_radius"
            android:layout_margin="@dimen/medium_margin"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/large_margin"
            >

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_bg"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/colorCyanBlue"
                >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_temparature"
                        android:layout_centerInParent="true"
                    />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_label"
                    android:textSize="@dimen/text_size_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/large_margin"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_margin="@dimen/large_margin"
    >
        <androidx.cardview.widget.CardView
            android:id="@+id/doorbellCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:cardCornerRadius="@dimen/card_radius"
            android:layout_margin="@dimen/medium_margin"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/large_margin"
            >

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_bg"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/colorLightPink"
                >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_doorbell"
                        android:layout_centerInParent="true"
                    />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doorbell_label"
                    android:textSize="@dimen/text_size_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/large_margin"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/pressureCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:cardCornerRadius="@dimen/card_radius"
            android:layout_margin="@dimen/medium_margin"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/large_margin"

            >

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_bg"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/colorLightGreen"
                >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_pressure"
                        android:layout_centerInParent="true"
                    />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_label"
                    android:textSize="@dimen/text_size_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/large_margin"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:cardCornerRadius="@dimen/card_radius"
            android:layout_margin="@dimen/medium_margin"

        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/large_margin"
            >

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_bg"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/colorOrange"
                >
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_info"
                        android:layout_centerInParent="true"
                    />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_label"
                    android:textSize="@dimen/text_size_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/large_margin"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>